--- a/ui/src/app/dashboard/components/widgets/line/line-widget.component.html
+++ b/ui/src/app/dashboard/components/widgets/line/line-widget.component.html
@@ -34,7 +34,7 @@
                            [tooltipDisabled]="true"
                            [animations]="false"
                            [xAxisTickFormatting]="timestampTickFormatting"
-                           [results]="multi" style="margin-top:10px;margin-bottom:10px;"
+                           [results]="multi" class="mt-10 mb-10"
                            [ngStyle]="{'fill': selectedPrimaryTextColor}">
     </ngx-charts-line-chart>
 </div>
