--- a/ui/src/app/dashboard/dialogs/edit-dashboard/edit-dashboard-dialog.component.html
+++ b/ui/src/app/dashboard/dialogs/edit-dashboard/edit-dashboard-dialog.component.html
@@ -28,7 +28,7 @@
 <mat-divider></mat-divider>
 <div mat-dialog-content class="md-dialog-content">
     <div fxFlex="100">
-        <div fxFlex="100" fxLayout="column" style="margin:5px;width:100%">
+        <div fxFlex="100" fxLayout="column" class="w-100 m-5">
             <mat-form-field class="full-width">
                 <mat-label>Dashboard Name</mat-label>
                 <input matInput required [(ngModel)]="dashboard.name">
