--- a/ui/src/app/data-explorer/components/overview/data-explorer-dashboard-overview.component.html
+++ b/ui/src/app/data-explorer/components/overview/data-explorer-dashboard-overview.component.html
@@ -27,7 +27,7 @@
         </button>
     </div>
     <div *ngIf="!editLabels" fxFlex="100" fxLayout="row wrap" fxLayoutAlign="start stretch">
-        <div fxFlex="100" class="assemblyOptions sp-blue-bg" style="padding:5px;">
+        <div fxFlex="100" class="assemblyOptions sp-blue-bg p-5">
             <div fxLayout="row" fxLayoutAlign="start center" fxFlex="100">
                 <h4>My Data Views</h4>
                 <span flex></span>
