--- a/ui/src/app/data-explorer/components/widgets/image/image-widget.component.html
+++ b/ui/src/app/data-explorer/components/widgets/image/image-widget.component.html
@@ -18,9 +18,9 @@
 
 
 <div class="widget-content">
-    <div class="widget-inner-options" style="margin-left: 0;margin-right: 0;margin-top: 0;">
+    <div class="widget-inner-options ml-0 mr-0 mt-0">
         <div fxFlex="100" fxLayout="row">
-            <div fxFlex="100" fxLayout="row" fxLayoutAlign="start center" style="margin-left: 0px;margin-right: 0px;">
+            <div fxFlex="100" fxLayout="row" fxLayoutAlign="start center" class="ml-0 mr-0">
                 <sp-select-properties [availableProperties]="availableColumns" [selectedProperties]="selectedColumn"></sp-select-properties>
             </div>
         </div>
