--- a/ui/src/app/data-explorer/components/widgets/line-chart/components/point-selection-info/point-selection-info.component.html
+++ b/ui/src/app/data-explorer/components/widgets/line-chart/components/point-selection-info/point-selection-info.component.html
@@ -16,11 +16,11 @@
   ~
   -->
 <p></p>
-<mat-form-field style="width: 100%; margin-top: 1px" appearance="none">
+<mat-form-field class="w-100" style="margin-top: 1px" appearance="none">
     <mat-label>selected time interval</mat-label>
     <input matInput value="{{_startX}} - {{_endX}}" readonly="True">
 </mat-form-field>
-<mat-form-field style="width: 100%; margin-top: 3px" appearance="none">
+<mat-form-field class="w-100" style="margin-top: 3px" appearance="none">
     <mat-label>selected data points</mat-label>
     <input matInput value="{{_n_selected_points}}" readonly="True">
 </mat-form-field>
