--- a/ui/src/app/data-explorer/components/widgets/utils/aggregate-configuration/aggregate-configuration.component.html
+++ b/ui/src/app/data-explorer/components/widgets/utils/aggregate-configuration/aggregate-configuration.component.html
@@ -18,7 +18,7 @@
 
 
 <div fxLayout="column" fxLayoutAlign="stretch">
-    <div fxFlex="100" layout="row" fxLayoutAlign="start center" style="margin-left: 0px;margin-right: 0px;">
+    <div fxFlex="100" fxLayout="row" fxLayoutAlign="start center" class="ml-0 mr-0">
         <div class="option" style="margin-left: 5px">
 
             <mat-form-field class="form-field-margin form-field-size-smaller">
