--- a/ui/src/scss/sp/main.scss
+++ b/ui/src/scss/sp/main.scss
@@ -365,6 +365,10 @@ md-content {
   //height: 100%;
 }
 
+.page-container-subheader {
+
+}
+
 .page-container-no-border {
   margin: 10px;
   min-height: calc(100% - 20px);
