--- a/ui/src/app/add/components/endpoint-item/endpoint-item.component.html
+++ b/ui/src/app/add/components/endpoint-item/endpoint-item.component.html
@@ -18,7 +18,7 @@
 
 <div fxFlex="100" fxLayout="column" fxLayoutAlign="start start" class="pipeline-element-box"
      style="padding:5px;margin-bottom:10px;background:{{getSelectedBackground()}}" [ngStyle]="item.editable ? {opacity: 1} : {opacity: 0.5}">
-    <div fxLayout="row" style="width: 100%;">
+    <div fxLayout="row" class="w-100">
         <i class="material-icons" [ngClass]="item.available ? 'endpoint-icon-available' : 'endpoint-icon-critical'">lens</i>
         <span fxFlex></span>
         <span class="{{itemTypeStyle}}" matTooltip="Endpoint {{item.available ? 'available' : 'not available'}}">{{itemTypeTitle}}</span>
