--- a/ui/src/app/configuration/configuration.component.html
+++ b/ui/src/app/configuration/configuration.component.html
@@ -17,8 +17,8 @@
   -->
 
 <div fxLayout="column" fxFlex="100" class="page-container">
-    <div fxLayout="row" style="padding:0px;background-color:#f6f6f6;">
-        <div fxLayout="fill" style="line-height:24px;border-bottom:1px solid #ccc">
+    <div fxLayout="row" class="p-0 sp-bg-lightgray">
+        <div fxLayout="fill" class="page-container-nav">
             <mat-tab-group [selectedIndex]="selectedIndex" (selectedIndexChange)="selectedIndexChange($event)">
                 <mat-tab label="Pipeline Element Configuration"></mat-tab>
                 <mat-tab label="Messaging"></mat-tab>
