--- a/ui/src/app/dashboard/components/overview/dashboard-overview.component.html
+++ b/ui/src/app/dashboard/components/overview/dashboard-overview.component.html
@@ -19,7 +19,7 @@
 <div fxFlex="100" fxLayout="column">
     <div fxFlex="100" fxLayout="column">
         <div fxLayout="row" class="fixed-height options-bar">
-            <div class="options-bar-item" fxLayoutAlign="start center" fxLayout="row" style="padding-left:10px;">
+            <div class="options-bar-item pl-10" fxLayoutAlign="start center" fxLayout="row">
                 <button mat-button mat-raised-button color="primary" (click)="openNewDashboardDialog()">
                     <i class="material-icons">add</i>
                    <span> New dashboard</span>
@@ -28,7 +28,7 @@
         </div>
     </div>
     <div fxFlex="100" fxLayout="row wrap" fxLayoutAlign="start stretch" class="m-20">
-        <div fxFlex="100" class="assemblyOptions sp-blue-bg" style="padding:5px;">
+        <div fxFlex="100" class="assemblyOptions sp-blue-bg p-5">
             <div fxLayout="row" fxLayoutAlign="start center" fxFlex="100">
                 <h4>My dashboards</h4>
                 <span flex></span>
