--- a/ui/src/app/dashboard/components/widget/dashboard-widget.component.html
+++ b/ui/src/app/dashboard/components/widget/dashboard-widget.component.html
@@ -16,7 +16,7 @@
   ~
   -->
 
-<div style="height:100%;">
+<div class="h-100">
     <div class="box">
         <div class="assemblyOptions sp-blue-bg m-0 row header h-40" *ngIf="editMode && headerVisible">
             <div fxFlex="100" fxLayout="row" fxLayoutAlign="end center">
@@ -33,7 +33,7 @@
                  fxLayout="column"
                  fxLayoutAlign="center center">
                 <i class="material-icons disconnect-icon">block</i>
-                <h5 style="text-align:center;">Widget not found, did you modify the pipeline?</h5>
+                <h5 class="text-center">Widget not found, did you modify the pipeline?</h5>
                 <button mat-button mat-raised-button color="primary" (click)="modifyWidget()">
                     <span>Modify widget</span>
                 </button>
@@ -42,7 +42,7 @@
                  fxLayout="column"
                  fxLayoutAlign="center center">
                 <i class="material-icons disconnect-icon">link_off</i>
-                <h5 style="text-align:center;">Pipeline <i>{{pipeline.name}}</i> is not running, did you start the pipeline?</h5>
+                <h5 class="text-center">Pipeline <i>{{pipeline.name}}</i> is not running, did you start the pipeline?</h5>
                 <button mat-button mat-raised-button color="primary" (click)="startPipeline()">
                     <span>Start pipeline</span>
                 </button>
