--- a/ui/src/app/dashboard/components/widgets/image/image-widget.component.html
+++ b/ui/src/app/dashboard/components/widgets/image/image-widget.component.html
@@ -21,6 +21,6 @@
         {{title}}
     </div>
     <div class="imageContent">
-        <img style="width: 100%;" src="data:image/jpg;base64,{{item}}" *ngIf="item" />
+        <img class="w-100" src="data:image/jpg;base64,{{item}}" *ngIf="item" />
     </div>
 </div>
