--- a/ui/src/app/dashboard/dashboard.component.html
+++ b/ui/src/app/dashboard/dashboard.component.html
@@ -17,8 +17,8 @@
   -->
 
 <div fxLayout="column" class="page-container">
-    <div fxLayout="row" style="padding:0px;background-color:#f6f6f6;">
-        <div fxFlex="100" style="line-height:24px;border-bottom:1px solid #ccc">
+    <div fxLayout="row" class="p-0 sp-bg-lightgray">
+        <div fxFlex="100" class="page-container-nav">
             <div fxFlex="100" fxLayout="row">
                 <div fxFlex fxLayoutAlign="start center">
                     <mat-tab-group [selectedIndex]="selectedIndex" (selectedIndexChange)="selectDashboard($event)">
