--- a/ui/src/app/data-explorer/components/datadownloadDialog/dataDownload.dialog.html
+++ b/ui/src/app/data-explorer/components/datadownloadDialog/dataDownload.dialog.html
@@ -44,12 +44,12 @@
                         All data in custom time interval
                     </mat-radio-button>
                 </mat-radio-group>
-                <div fxLayout="row" fxLayoutAlign="start center" style="margin-left: 35px">
-                    <mat-form-field style="top: -10px; width: 270px">
+                <div fxLayout="row" fxLayoutAlign="start center" class="ml-35">
+                    <mat-form-field class="form-field-date">
                         <input matInput [owlDateTime]="dt1" [owlDateTimeTrigger]="dt1"
                                [(ngModel)]="dateRange" [selectMode]="'range'" [disabled]="selectedData !== 'customInterval'">
                         <mat-icon matSuffix [owlDateTimeTrigger]="dt1" *ngIf="selectedData === 'customInterval'">event</mat-icon>
-                        <mat-icon matSuffix style="color: #e0e0e0" *ngIf="selectedData !== 'customInterval'">event</mat-icon>
+                        <mat-icon matSuffix class="event-color" *ngIf="selectedData !== 'customInterval'">event</mat-icon>
                         <owl-date-time #dt1></owl-date-time>
                     </mat-form-field>
                 </div>
@@ -84,7 +84,7 @@
                 <button mat-button warn  color="warn" (click)="cancelDownload()">Cancel</button>
             </div>
             <div div fxLayout="column" fxLayoutAlign="space-around center" *ngIf="downloadFinish">
-                <mat-icon style="font-size: 100px;height: 100px; width: 100px; color:#b3b3b3;">check</mat-icon>
+                <mat-icon class="icon-check">check</mat-icon>
             </div>
         </mat-step>
     </mat-horizontal-stepper>
