--- a/ui/src/scss/main.scss
+++ b/ui/src/scss/main.scss
@@ -43,6 +43,7 @@
 @import './sp/sp-theme';
 
 @import './sp/main';
+@import './sp/layout';
 @import './sp/loading-bar';
 @import './sp/buttons';
 @import './sp/buttons.ng1';
